# du-migration-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: apis.tf  artifact_registry.tf  bigquery.tf  cloud_run.tf  cloudsql.tf  iam.tf  outputs.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
notebooks/: 01_explore_source.ipynb
src/migration/: __main__.py  config.py  extract.py  pipeline.py  schema.py  transform.py
src/migration/load/: __init__.py  base.py  bigquery.py  postgres.py
tests/: test_schema.py  test_transform.py
tests/fixtures/: sample_api_response.json
